The incorrect -XX:StackRedPages, -XX:StackShadowPages, -XX:StackYellowPages could cause VM crash

XMLWordPrintable

    • b01
    • x86
    • generic
    • Verified

        Some combinations of -XX:StackRedPages, -XX:StackShadowPages, -XX:StackYellowPages causes VM crash.
        Also VM hangs if StackShadowPages=0.
        VM should correctly report about incorrect values. Please note that these options are described in Sun official guide http://java.sun.com/javase/6/webnotes/trouble/TSG-VM/html/crashes.html.
        Here is the example (I checked on solaris-i586 only):
        -->java -XX:StackShadowPages=70
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (os_solaris.cpp:4865), pid=4199, tid=2
        # Error: guarantee((Solaris::min_stack_allowed >= (StackYellowPages+StackRedPages+StackShadowPages+BytesPerWord +1) * page_size),"need to increase Solaris::min_stack_allowed on this platform")
        #
        # JRE version: 7.0-b72
        # Java VM: Java HotSpot(TM) Server VM (17.0-b01 mixed mode solaris-x86 )
        # An error report file with more information is saved as:
        # /tmp/xx/hs_err_pid4199.log
        #
        # If you would like to submit a bug report, please visit:
        # http://java.sun.com/webapps/bugreport/crash.jsp
        #
        Abort (core dumped)

              Assignee:
              Coleen Phillimore
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: