6885308: The incorrect -XX:StackRedPages, -XX:StackShadowPages, -XX:StackYellowPages could cause VM crash

Test minimal stack sizes given (also fixed linux compilation error)

Reviewed-by: never, phh, coleenp